# site

./: .eslintignore  .eslintrc.cjs  .gitignore  README.md  eslint.config.js  package.json  requirements.txt  svelte.config.js  tsconfig.json  uno.config.ts  vercel.json  vite.config.ts
.github/workflows/: eslint.yml  install-poetry.yml  main.yml  poetry-install.yml  python-checks.yml  python-setup.yml  spelling.yml
src/: app.d.ts  app.html  copy-assets.js  copy-assets.mjs
src/docs/py/: intro.svx  pyproject.toml  quick-start.svx
src/lib/: highlight.ts  hub.ts  index.ts  markdown.ts  types.ts
src/lib/components/: CodeBlock.svelte  ConsolePrompt.svelte  Editor.svelte  ErrorExplainModal.svelte  InlineCode.svelte  Markdown.svelte  Portal.svelte
src/lib/components/console/: HeadlessConsole.svelte
src/lib/examples/: explain.ts  show-time-and-translate.py  template.py
src/lib/pyodide/: console.py  console.ts  entries.ts  init.py  init.ts  translate.ts
src/lib/utils/: cache.ts  source.ts  typing.ts
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +server.ts
src/routes/api/docs/: +server.ts
src/routes/hub/[...path]/: +server.ts
src/routes/og/: +page.svelte
src/routes/og/[...og]/: +server.ts  OG.svelte
src/routes/og/[...path]/: +server.ts  OG.svelte
src/routes/partial-json-parser/: +page.svelte
src/routes/playground/: +page.server.ts  +page.svelte
src/routes/prompts/[...slug]/: +page.svelte  +page.ts
src/routes/py/: +page.svelte
src/routes/py/[slug]/: +page.svelte  +page.ts
src/templates/: explain-error.j2  groundings.j2
